# Manifold-Directing-AI-agents-to-transform-expertise-into-infinite-paths-to-mastery

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  ui-redesign-plan.md
pipeline/: Dockerfile  Dockerfile.render  Dockerfile.render.dockerignore  pyproject.toml
pipeline/app/: config.py  dependencies.py  main.py
pipeline/demo/: transcript.json
pipeline/migrations/: 001_initial_schema.sql  002_ingestion_jobs.sql  003_topic_review_status.sql  004_graph_review_status.sql  005_clip_review_status.sql  006_question_review_status.sql  007_audit_events.sql  008_phase10_access_and_performance.sql  009_phase10_query_indexes.sql  010_dashboard_fingerprint_index.sql  011_simulated_learners.sql  012_local_clip_materialization.sql  013_inherit_split_topic_concepts.sql  014_backfill_renamed_split_topic_concepts.sql  015_agent_course_os.sql  016_revision_scoped_uniqueness.sql  017_revision_briefs.sql
pipeline/scripts/: phase10_load_test.py
pipeline/tests/: fakes.py  test_access_api.py  test_access_service.py  test_assessment_service.py  test_assessments_api.py  test_audit_api.py  test_audit_service.py  test_clip_materializer.py  test_clip_service.py  test_clips_api.py  test_course_generation_worker.py  test_course_os_api.py  test_course_os_portfolio.py  test_course_os_service.py  test_dashboard_api.py  test_dashboard_service.py  test_dashboard_signal_generation.py  test_graph_api.py  test_graph_service.py  test_health.py  test_ingestion_api.py  test_ingestion_service.py  test_migrations.py  test_providers.py  (+8 more)
(+171 files in other folders)
