[project]
name = "coursefoundry-pipeline"
version = "0.0.0"
description = "AI and video pipeline service for CourseFoundry"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "openai>=2.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.9",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
  "yt-dlp>=2026.1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "types-yt-dlp>=2026.1.0"
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
